[package]
name = "hash_cache"
version = "0.1.0"
authors = ["Tupshin Harper <tupshin@tupshin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hashcache_benchmark"
harness = false